Added the page structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-  <title>Teste fodase</title>
+  <title>Jokenpo</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="icon" href="./images/icons8-rocha-40.png">
 </head>
+
 <body>
+
+  <div class="labels">
+    <p id="item1">YOU</p>
+    <p id="item2">COMPUTER</p>
+  </div>
+
+  <div class="plays">
+
+    <div id="player">
+      <p></p>
+    </div>
+
+    <div id="computer">
+      <p></p>
+    </div>
+
+  </div>
+
+  <div class="labels2">
+    <p id="item3">0</p>
+    <p id="item4">0</p>
+  </div>
+
+  <div id="results">
+    <p>Play Rock-Paper-Scissors against the computer, first to reach 5 points wins !</p>
+  </div>
+
+  <div id="playagainbtn"></div>
+
+  <div class="choices">
+    <input type="image" id="rock" src="./images/rock.png" alt="Rock">
+    <input type="image" id="paper" src="./images/paper.png" alt="Paper">
+    <input type="image" id="scissors" src="./images/scissors.png" alt="Scissors">
+  </div>
+  
   <script src="rps.js"></script>
+
 </body>
 </html>
